// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeadMenu > props > :active 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      
    </ul>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`HeadMenu > props > :height 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
  height="750px"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      
    </ul>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`HeadMenu > props > :theme 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      
    </ul>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`HeadMenu > slot > <logo> 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <div
      class="t-menu__logo"
    >
      
      <div />
      
    </div>
    <ul
      class="t-menu"
    >
      
      
    </ul>
    <!---->
  </div>
  <!---->
</div>
`;

exports[`HeadMenu > slot > <operations> 1`] = `
<div
  class="t-menu t-head-menu t-menu--light"
>
  <div
    class="t-head-menu__inner"
  >
    <!---->
    <ul
      class="t-menu"
    >
      
      
    </ul>
    <div
      class="t-menu__operations"
    >
      
      <div />
      
    </div>
  </div>
  <!---->
</div>
`;
